# solo-guide

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: main.py
app/application/api/messages/: auth.py  create_db.py  handlers.py  shemas.py
app/application/front/: main_window.py
app/application/front/models/: models.py
app/domain/entities/: base.py  model.py  place_types.py
app/domain/exceptions/: base.py  model.py
app/infra/repository/: clear_db.py  connect.py  converter.py  entrypoint.py  model.py  requests_db.py  show_place.py
app/infra/repository/exceptions/: base.py  route_to_db.py  user.py
app/tests/domain/: test_model.py
app/tests/logic/: test_show_place.py
docker_compose/: app.yaml  storages.yaml
